==============
lxml changelog
==============

2.2beta3 (2009-02-17)
=====================

Features added
--------------

* ``XSLT.strparam()`` class method to wrap quoted string parameters
  that require escaping.

Bugs fixed
----------

* Memory leak in XPath evaluators.

* Crash when parsing indented XML in one thread and merging it with
  other documents parsed in another thread.

* Setting the ``base`` attribute in ``lxml.objectify`` from a unicode
  string failed.

* Fixes following changes in Python 3.0.1.

* Minor fixes for Python 3.

Other changes
-------------

* The global error log (which is copied into the exception log) is now
  local to a thread, which fixes some race conditions.

* More robust error handling on serialisation.


2.2beta2 (2009-01-25)
=====================

Bugs fixed
----------

* Potential memory leak on exception handling.  This was due to a
  problem in Cython, not lxml itself.

* ``iter_links`` (and related link-rewriting functions) in
  ``lxml.html`` would interpret CSS like ``url("link")`` incorrectly
  (treating the quotation marks as part of the link).

* Failing import on systems that have an ``io`` module.


2.1.5 (2009-01-06)
==================

Bugs fixed
----------

* Potential memory leak on exception handling.  This was due to a
  problem in Cython, not lxml itself.

* Failing import on systems that have an ``io`` module.


2.2beta1 (2008-12-12)
=====================

Features added
--------------

* Allow ``lxml.html.diff.htmldiff`` to accept Element objects, not
  just HTML strings.

Bugs fixed
----------

* Crash when using an XPath evaluator in multiple threads.

* Fixed missing whitespace before ``Link:...`` in ``lxml.html.diff``.

Other changes
-------------

* Export ``lxml.html.parse``.


2.1.4 (2008-12-12)
==================

Bugs fixed
----------

* Crash when using an XPath evaluator in multiple threads.


2.0.11 (2008-12-12)
===================

Bugs fixed
----------
